# trigno_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: trignoEMG.msg  trignoIMU.msg  trignoMultiEMG.msg  trignoMultiIMU.msg
