<?xml version="1.0"?>
<package format="2">
  <name>trigno_msgs</name>
  <version>0.0.0</version>
  <description>The trigno_capture package</description>
  <maintainer email="jakubach@gmail.com">Jakub</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
